force-app/main/default/objects/Education__c/fields/Country_of_Graduation__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Graduation__c</fullName>
    <label>Country of Graduation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>