force-app/main/default/objects/Education__c/fields/Educational_Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>Educational_Institution_Name__c</fullName>
    <formula>Institution__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Educational Institution Name</label>
    <type>Text</type>
</CustomField>