force-app/main/default/objects/Education__c/fields/Graduation_Year_system__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Year_system__c</fullName>
    <formula>TEXT(YEAR(Graduation_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Graduation Year (system)</label>
    <type>Text</type>
</CustomField>