force-app/main/default/objects/Education__c/fields/Institution__c.field-meta.xml
<CustomField>
    <fullName>Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Educational Institution</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Educational Institution</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Education (Institution)</relationshipLabel>
    <relationshipName>Institution_Educations</relationshipName>
    <type>Lookup</type>
</CustomField>