force-app/main/default/objects/Education__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level Of Education</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>College or CEGEP diploma — complete</fullName>
            </value>
            <value>
                <fullName>Postgraduate-level profession-specific degree</fullName>
            </value>
            <value>
                <fullName>Residency</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
            <value>
                <fullName>Baccalaureate</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>Doctorate</fullName>
            </value>
            <value>
                <fullName>Master’s</fullName>
            </value>
            <value>
                <fullName>Undergraduate PharmD</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Not Collected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>