force-app/main/default/objects/Education__c/fields/Stream__c.field-meta.xml
<CustomField>
    <fullName>Stream__c</fullName>
    <label>Stream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Registrant_User_Groups</valueSetName>
    </valueSet>
</CustomField>