force-app/main/default/objects/Education__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic Education in Pharmacy</fullName>
            </value>
            <value>
                <fullName>Highest Level of Post-Basic Education in Pharmacy</fullName>
            </value>
            <value>
                <fullName>Basic Education</fullName>
                <isActive>false</isActive>
                <label>Basic Education</label>
            </value>
            <value>
                <fullName>Graduation Highest Level</fullName>
                <isActive>false</isActive>
                <label>Graduation Highest Level</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>