force-app/main/default/objects/Education__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Registrant__c</columns>
    <columns>Stream__c</columns>
    <columns>Type__c</columns>
    <columns>Level__c</columns>
    <columns>Institution__c</columns>
    <columns>Graduation_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>